[package]
name = "gptsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "*"
regex = "*"
iced = { version = "0.10.0", features = ["tokio"] }
dotenvy = "0.15.7"
serde_json = "1.0.108"
